# bookkeeping

./: .gitignore  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_SUMMARY.md  DEPLOYMENT_GUIDE.md  LOCAL_DEVELOPMENT.md  README.md  SETUP_COMPLETE.md  pages.toml  wrangler.jsonc
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_migration.sh
backend-ts/: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  test_ai.sh  tsconfig.json  wrangler.toml
backend-ts/db/: schema.sql
backend-ts/migrations/: .gitkeep  add_ai_conversations_table.sql  add_items_table.sql  schema.sql  (+9 more)
backend/app/: main.py
backend/app/api/: __init__.py  categories.py  exchange_rates.py  summary.py  transactions.py  translate.js  translate.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  category.py  exchange_rate.py  transaction.py
backend/app/schemas/: __init__.py  category.py  exchange_rate.py  summary.py  transaction.py
backend/migrations/: add_currency_to_transactions.sql  add_parent_id_to_categories.sql  add_translations_to_categories.sql  create_exchange_rates_table.sql
client/: .gitignore  README.md  _redirects  eslint.config.js  index.html  package-lock.json  package.json
docs/: AI_FEATURES.md  AI_IMPLEMENTATION.md  AI_TRANSACTION_CREATION.md  CURRENCY_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  HIERARCHICAL_CATEGORIES.md  ITEM_TRACKING_COMPLETE_GUIDE.md  ITEM_TRACKING_FEATURE.md  ITEM_TRACKING_OPTIMIZATIONS.md  SUBSCRIPTIONS.md  UTILITY_READINGS.md
(+83 files in other folders)
